--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
 			</div>
 			<div class="mobile-menu-btn">≡</div>
 			<section id="about">
-				<h1>Mohamed Nasr</h1>
-				<p class="intro-text">Welcome... I'm a Backend Developer with strong software engineering foundations and Node.js expertise. Zagazig University graduate with
-					comprehensive knowledge of development principles, data structures, and algorithms. Delivers scalable backend
-					solutions with commitment to technical innovation and growth.</p>
+				<h1>Greetings!👋 I'm Mohamed Nasr</h1>
+				<p class="intro-text">Backend Developer specializing in Node.js, with deep expertise in software architecture, data structures, and algorithms (B.Sc., Zagazig University). I design and build scalable, high-performance systems, driven by a commitment to clean code, efficiency, and continuous innovation.</p>
 			</section>
 			<section id="projects">
                 <h2>Projects</h2>
@@ -51,50 +49,113 @@
 					<button class="category-btn" data-category="play">Google Play</button>
 				</div>
 				<div class="project-grid">
+					<div class="project-card" data-categories="nodejs">
+                        <h3>TaskManager App</h3>
+						<p>Created an advanced task management system that improved user productivity.</p>
+						<a href="https://github.com/mohnasr137/taskManager" target="_blank">View Project</a>
+					</div>
+					<div class="project-card" data-categories="nodejs">
+                        <h3>Simple Portfolio</h3>
+						<p>Developed a website to showcase my projects, skills, and experience as a backend developer.</p>
+						<a href="https://github.com/mohnasr137/portfolio" target="_blank">View Project</a>
+					</div>
+					<div class="project-card" data-categories="nodejs">
+                        <h3>Marketi App</h3>
+						<p>Developed an e-commerce with JWT and product search/categorization features.</p>
+						<a href="https://github.com/mohnasr137/Marketi-App" target="_blank">View Project</a>
+					</div>
+					<div class="project-card" data-categories="nodejs">
+                        <h3>Edit Json</h3>
+						<p>Integrated JSON parsing functionality to enhance their capabilities for handling structured data.</p>
+						<a href="https://github.com/mohnasr137/edit-json" target="_blank">View Project</a>
+					</div>
+					<div class="project-card" data-categories="nodejs">
+						<h3>Inscryption</h3>
+						<p>Developed a 3D interactive web app featuring multiple cipher algorithms, AI-powered decryption for cryptographic operations.</p>
+						<a href="https://inscryption.onrender.com" target="_blank">View Project</a>
+					</div>
+					<div class="project-card" data-categories="nodejs">
+						<h3>UI Evolution</h3>
+						<p>Developed an AI-powered tool to automate UI component generation from text descriptions.</p>
+						<a href="https://github.com/mohnasr137/UI_Evolution" target="_blank">View Project</a>
+					</div>
+					<div class="project-card" data-categories="nodejs">
+						<h3>Remote Explorer</h3>
+						<p>Enable remote file exploration on PC from mobile, allowing to browse files and download folders as ZIP archives.</p>
+						<a href="https://github.com/mohnasr137/remoteExplorer" target="_blank">View Project</a>
+					</div>
+
+
+
+					<div class="project-card" data-categories="web3d">
+						<h3>Cube3D</h3>
+						<p>Developed an spinning cube, demonstrating skills in 3D graphics and WebGL rendering.</p>
+						<a href="https://github.com/mohnasr137/cube3D" target="_blank">View Project</a>
+					</div>
                     <div class="project-card" data-categories="web3d">
-                        <h3>Earth3D</h3>
-                        <p>Interactive 3D Earth model with realistic textures and rotation using Three.js.</p>
-                        <a href="https://github.com/mohnasr137" target="_blank">View Project</a>
+						<h3>Earth3D</h3>
+                        <p>Created an interactive Earth with dynamic lighting, animated clouds, and a starry background.</p>
+                        <a href="https://github.com/mohnasr137/earth3D" target="_blank">View Project</a>
                     </div>
 					<div class="project-card" data-categories="web3d">
-                        <h3>Cube3D</h3>
-						<p>Interactive 3D cube with physics simulation and user interaction capabilities.</p>
-						<a href="https://github.com/mohnasr137" target="_blank">View Project</a>
+						<h3>Tube3D</h3>
+						<p>Built a dynamic tube with rotating cubes, smooth camera movements, and bloom effects.</p>
+						<a href="https://github.com/mohnasr137/tube3D" target="_blank">View Project</a>
+					</div>
+					<div class="project-card" data-categories="web3d">
+						<h3>Icosahedron3D</h3>
+						<p>Created a dynamic experience with scene transitions and real-time color animations.</p>
+						<a href="https://github.com/mohnasr137/icosahedron3D" target="_blank">View Project</a>
 					</div>
 					<div class="project-card" data-categories="web3d">
 						<h3>Gravity3D</h3>
-						<p>Physics simulation demonstrating gravity effects on multiple objects using Rapier.js and Three.js.</p>
-						<a href="https://github.com/mohnasr137" target="_blank">View Project</a>
+						<p>Developed an interactive physics simulation, featuring real-time object interactions.</p>
+						<a href="https://github.com/mohnasr137/gravity3D" target="_blank">View Project</a>
 					</div>
-					<div class="project-card" data-categories="web3d nodejs">
-						<h3>Inscryption</h3>
-						<p>3D interactive web application implementing multiple cipher algorithms with AI-driven decryption capabilities.</p>
-						<a href="https://github.com/mohnasr137" target="_blank">View Project</a>
+
+
+
+					<div class="project-card" data-categories="figma">
+						<h3>TaskNest APP</h3>
+						<p>Designed a team management app, inspired by WhatsApp, for task tracking, and team collaboration.</p>
+						<a href="https://www.figma.com/design/ENPUquvXEw3gJzJw3a4jD2/TaskNest" target="_blank">View Project</a>
 					</div>
-					<div class="project-card" data-categories="nodejs figma">
-						<h3>UI-Evolution</h3>
-						<p>System utilizing AI to automate the conversion of textual descriptions into UI components, improving design efficiency.</p>
-						<a href="https://github.com/mohnasr137" target="_blank">View Project</a>
+					<div class="project-card" data-categories="figma">
+						<h3>FastCharge App</h3>
+						<p>Designed a phone charging app that allows users to scan phone numbers to charge and make calls.</p>
+						<a href="https://www.figma.com/design/EH4rQqvuAWIdyiFIBoLlfe/FastCharge" target="_blank">View Project</a>
 					</div>
-					<div class="project-card" data-categories="nodejs">
-                        <h3>Remote Explorer</h3>
-						<p>Application to enable remote file exploration on PC from mobile, allowing users to browse files and download folders as ZIP archives.</p>
-						<a href="https://github.com/mohnasr137" target="_blank">View Project</a>
+
+
+
+
+					<div class="project-card" data-categories="ml">
+						<h3>Form Model</h3>
+						<p>Built a machine learning model to predict autism likelihood from questionnaire responses.</p>
+						<a href="https://github.com/mohnasr137/flask_ml" target="_blank">View Project</a>
 					</div>
 					<div class="project-card" data-categories="ml">
-                        <h3>Autism Assessment</h3>
-						<p>Machine learning models for autism assessment, including face recognition and handwriting analysis.</p>
-						<a href="https://github.com/mohnasr137" target="_blank">View Project</a>
+						<h3>Childface Model</h3>
+						<p>Developed a deep learning model for child face recognition to assess autism likelihood.</p>
+						<a href="https://github.com/mohnasr137/flask_childface" target="_blank">View Project</a>
 					</div>
 					<div class="project-card" data-categories="ml">
-                        <h3>Pattern Analysis</h3>
-						<p>Deep learning model for analyzing coloring patterns to assist in autism diagnosis.</p>
-						<a href="https://github.com/mohnasr137" target="_blank">View Project</a>
+						<h3>Coloring Model</h3>
+						<p>Created a deep learning model to assess autism likelihood based on coloring patterns.</p>
+						<a href="https://github.com/mohnasr137/flask_coloring" target="_blank">View Project</a>
 					</div>
-					<div class="project-card" data-categories="nodejs">
-                        <h3>Tadabar App</h3>
-						<p>Functionality to handle and display rules for proper pronunciation and recitation of the Quran, with enhanced audio file compression.</p>
-						<a href="https://github.com/mohnasr137" target="_blank">View Project</a>
+					<div class="project-card" data-categories="ml">
+						<h3>Handwriting Model</h3>
+						<p>Developed a deep learning model to assess autism likelihood through handwriting analysis.</p>
+						<a href="https://github.com/mohnasr137/flask_handwriting" target="_blank">View Project</a>
+					</div>
+
+
+
+					<div class="project-card" data-categories="play">
+						<h3>Tadabar App</h3>
+						<p>Developed a Quran learning platform with Tajweed rules visualization and secure JWT-based user authentication.</p>
+						<a href="https://play.google.com/store/apps/details?id=com.binaryplus.tadabar" target="_blank">View Project</a>
 					</div>
 				</div>
 			</section>
